    * BUG 972: Fix segfault in cli_ds_getprimarydominfo().
    * BUG 936: fix bind credentials for schannel binds in smbd.
    * BUG 446: Fix output of smbclient for better compatibility 
      with scripts based on the 2.2 version (including Amanda).


o   Luke Howard <lukeh@PADL.COM>
    * Fix segfault in session setup reply caused by a early free().


o   Volker Lendecke <vl@samba.org>
    * Add a German translation for SWAT.
    * Fix a segfaults in winbindd.
    * Fix the user's domain passed to register_vuid() from 
      reply_spnego_kerberos().
      
      
o   Herb Lewis <herb@samba.org>
    * Fix bit rot in psec.
    
    
o   John Klinger <john.klinger@lmco.com>
    * Implement initgroups() call in nss_winbind on Solaris.


o   Jim McDonough <jmcd@us.ibm.com>
    * Fix regression in net rpc join caused by recent changes 
      to cli_lsa_query_info_policy().


o   Stefan Metzmacher <metze@samba.org>
    * Fix XFS quotas: HAVE_XFS_QUOTA -> HAVE_XFS_QUOTAS
                      XFS_USER_QUOTA -> USRQUOTA
                      XFS_GROUP_QUOTA -> GRPQUOTA
    * Fix disk_free calculation with group quotas.
    * Add debug class 'quota' and a lot of DEBUG()'s 
      to the quota code.
    * Fix sys_chown() when no chown() is presend
    

o   Tim Potter <tpot@samba.org>
    * BUG 905: Remove POBAD_CC to fix Solaris FOrte compiles.

    
o   Jelmer Vernooij <jelmer@samba.org>
    * Add smbget utility - a wget-clone for the SMB/CIFS protocol.
    * Fix for libnss_wins on IRIX platforms.
    * Fix swatdir for --with-fhs.



Changes since 3.0.1
----------------------

    Parameter Name              Action
    --------------              ------
    ldap replication sleep      New


Commits
-------

o   Jeremy Allison <jra@samba.org>
    * Tidy up of NTLMSSP code.
    * Fixes for SMB signing errors
    * BUG 815: Workaround NT4 bug to support plaintext
      password logins and UNICODE.

    
o   Petri Asikainen <paca@sci.fi>